Remove old files. Fix fail on mkdir. Return error.

--- a/image/Makefile
+++ b/image/Makefile
@@ -1,15 +1,15 @@
 REPOSITORY := erwin82
 NAME := maven
-VERSION ?= v3.5.3-jdk-8-r1-3
+VERSION ?= v3.5.3-jdk-8-r.2
 
-build: _build ##@targets Builds the docker image.
 .PHONY: build
+build: _build ##@targets Builds the docker image.
 
-clean: _clean ##@targets Removes the local docker image.
 .PHONY: clean
+clean: _clean ##@targets Removes the local docker image.
 
-deploy: _deploy ##@targets Deploys the docker image to the repository.
 .PHONY: deploy
+deploy: _deploy ##@targets Deploys the docker image to the repository.
 
 include ../utils/Makefile.help
 include ../utils/Makefile.functions
