Update to 3.6.1-jdk-12

--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -1,21 +1,9 @@
-FROM maven:3.5.3-jdk-8
+FROM maven:3.6.1-jdk-12
 LABEL maintainer "Erwin Mueller <erwin.mueller@deventm.com>"
 
-ARG APT_CACHE
-
 RUN set -x \
-  # Optional add proxy entries for apt.
-  && if [ -n "${APT_CACHE}" ]; then \
-  echo Acquire::ftp::Proxy \"$APT_CACHE\"; >> /etc/apt/apt.conf.d/08proxy;\
-  echo Acquire::http::Proxy \"$APT_CACHE\"; >> /etc/apt/apt.conf.d/08proxy;\
-  echo Acquire::https::Proxy \"$APT_CACHE\"; >> /etc/apt/apt.conf.d/08proxy;\
-  fi
-
-RUN set -x \
-  && DEBIAN_FRONTEND=noninteractive \
-  && apt-get update \
-  && apt-get install -y gpg \
-  && rm -rf /var/lib/apt/lists/*
+  && yum install -y gpg \
+  && rm -rf /var/cache/yum
 
 ADD rootfs/ /
 
