Feature #4220 Setup to run as Jenkins user.

--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -9,11 +9,16 @@ ADD rootfs/ /
 
 ADD docker-run-utils/docker-entrypoint-utils.sh /
 
-RUN set -x \
-  && chmod +x /*.sh
-
 ENV DEBUG="false" \
+  PROJECT_JENKINS_HOME="/home/jenkins" \
   PROJECT_JENKINS_WORKSPACE="/home/jenkins/workspace" \
   PROJECT_JENKINS_USER="10000"
+
+RUN set -x \
+  && chmod +x /*.sh \
+  && mkdir -p "${PROJECT_JENKINS_HOME}" \
+  && chown ${PROJECT_JENKINS_USER}.${PROJECT_JENKINS_USER} "${PROJECT_JENKINS_HOME}" \
+  && echo "jenkins:x:${PROJECT_JENKINS_USER}:${PROJECT_JENKINS_USER}::${PROJECT_JENKINS_HOME}:/bin/bash" >> /etc/passwd \
+  && echo "jenkins:x:${PROJECT_JENKINS_USER}:" >> /etc/group
 
 ENTRYPOINT ["/docker-entrypoint.sh"]
